# ProjectBlur

./: CMakeLists.txt  CMakePresets - FUCK-MS.json  CMakePresets.json
core/: CMakeLists.txt
core/src/: main.cpp
infra/: CMakeLists.txt
infra/include/pb/: macro.hpp
infra/include/pb/graphics/: color.hpp
infra/include/pb/math/: angle.hpp  position.hpp
infra/include/pb/meta/: dimension.cache.inl  dimension.hpp  enumeration.hpp  member.hpp  member.visit.inl  name.hpp  string.hpp
infra/include/pb/platform/: environment.hpp  exception.hpp  os.hpp
infra/include/pb/utility/: guard.hpp
infra/src/platform/: environment.cpp  exception.cpp  os.cpp
